# FunkyBot

./: .breakpoints  CONTRIBUTING.md  main.py  pyproject.toml  server.py
data/: custom_commands.json
