[tool.poetry]
name = "repl_python3_FunkyBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
waitress = "^2.0.0"
discord = "^1.7.3"
Flask = "^2.0.1"
replit = "^3.2.4"
pytz = "^2021.3"
requests-oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
